kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krtk
  labels:
    app: krtk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: krtk
  template:
    metadata:
      labels:
        app: krtk
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: krtk
          image: krtk
          command:
            - gunicorn
            - app:create_app()
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 1000Mi
              cpu: 100m
