kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krtk
spec:
  selector:
    app: krtk
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
